@@ -94,7 +94,7 @@
       a.tweets_link.selected
         +replace-text("icon-tweet-selected.png")
 
-  .users
+  .tweets
     display: none
 
   .tweets, .users, .lists
