@@ -5,6 +5,7 @@ Version 0.3
 ==========
   Peco Danajlovski <vortexmk@gmail.com>
   * Replacing register link with cute image
+  * Showing users instead of tweets as default
   
 
 02.04.2010
